--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,31 @@
     list-style: none;
     text-decoration: none;
 }
+.awesome_title {
+    width: 100%;
+    text-align: center;
+    color: #212121;
+    font-style: normal;
+    font-style: normal;
+    font-size: 36px;
+    line-height: 42px;
+    font-family: 'Raleway', sans-serif;
+}
+    .awesome_text {
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    color: #86878B;
+    font-family: 'Open Sans', sans-serif;
+    }
+    .container_ine {
+        max-width: 64px;
+        width: 100%;
+        border-top: 2px solid #D98943 ;
+        margin: 30px auto 30px;
+    }
 
 .container {
     max-width: 1170px;
@@ -15,24 +40,50 @@
     margin-top: 30px;
   }
 
-  .description_awesome-row {
-    margin-top: 30px;
-    margin-left: 50px;
-    width: 300px;
-  }
-  .awesome-row_item {
-      margin-bottom: 30px;
-      
-  }
-
- .awesome-item_img {
-     width: 70px;
-     height: 70px;
-     border: 1px solid red;
-     border-radius: 50%;
-     padding-bottom: 50px;
-    
-
-     
- }
-    
+.description_awesome-row {
+    margin: 30px 30px 30px 250px;
+    width: 350px;
+    height: 225px;
+    display: flex;
+    flex-direction: row;   
+}
+.awesome-row_item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 350px;
+}
+.awesome-item_img{
+    display: flex;
+    width: 70px;
+    height: 70px;
+    mix-blend-mode: normal;
+    border: 1px solid #D98943;
+    border-radius: 100%;
+    align-items: center;
+    justify-content: center;  
+}
+.awesome-item_title{
+    margin-top: 20px;
+    width: 189px;
+    height: 29px;
+    font-family: Open Sans;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 27px;
+    color: #333333;
+    text-align: center;
+}
+.awesome-item_text{
+    margin-top: 20px; 
+    width: 350px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+    padding-left: 1px;
+    padding-right: 1px;
+}
